0022316: Mistakes in TestTopOpeDraw_OtherCommands.cxx